<resources>
    <string name="app_name">Employ Nepal</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="login">Login</string>
    <string name="imageview">Imageview</string>
    <string name="emailph">Email-Address</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="notregistered">Not Registered Yet?</string>
    <string name="remember_me">Remember me</string>
    <string name="createAccount">Create New Account</string>
    <string name="registration">Registration</string>
    <string name="login_as_job_provider">Login as Job Provider</string>
    <string name="login_as_job_Seeker">Login as job seeker</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Contact</string>
    <string name="location">Location</string>
    <string name="Female">Female</string>
    <string name="male">Male</string>
    <string name="others">Others</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="auth_failed">Authentication Error Occured</string>
    <string name="minimum_password">Password too short! Minimum 6 characters needed</string>
    <string name="job_provider_s_dashboard">Job Provider\'s Dashboard</string>
    <string name="verification">Verification</string>
    <string name="verify_code">Verification Code</string>
    <string name="otp_txt">Enter the OTP code sent to your phone number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="sumbit_otp">Submit</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="forget_password_detail">Provide your account\'s email for which you want to reset password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="next_btn">NEXT</string>
    <string name="employ_nepal">Employ Nepal</string>
    <string name="forgot_password_icon">Forgot password icon</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">Please set up your new password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="update">Update</string>
    <string name="updateData">updateData</string>
    <string name="password_updated">PASSWORD UPDATED</string>
    <string name="password_updated_success">Your password has been updated</string>
    <string name="title_activity_maps">Map</string>
    <string name="welcome_to_employ_nepal">Welcome to Employ Nepal</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="nav_header_title">Employ Nepal</string>
    <string name="nav_header_subtitle">user@gmail.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_help">Help</string>
    <string name="menu_aboutus">About us</string>
    <string name="menu_logout">Logout</string>
    <string name="title_job">Jobs</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="start">Start</string>
    <string name="close">Close</string>

    <string name="select_date">Select date</string>
    <string name="job_title">Job Title</string>
    <string name="job_description">Job Description</string>
    <string name="number_of_employees">Number Of Employees</string>
    <string name="job_location">Job Location</string>
    <string name="job_category">Job Category</string>
    <string name="approximate_working_hours">Approximate Working Hours</string>
    <string name="salary">Salary</string>
    <string name="apply_before">Apply Before</string>
    <string name="post">Post</string>
    <string name="range">Range</string>
    <string name="fixed">Fixed</string>
    <string name="negotiable">Negotiable</string>
    <string name="contact_info">Contact Information</string>
    <string name="post_a_job">Post Job</string>
    <string name="job_post_date">Job Post Date</string>
    <string name="Job_seeker_dashboard">Job Seeker Dashboard</string>
    <string name="search_here">Search Jobs Here</string>
    <string name="company">Company :</string>
    <string name="job_provider_s_name">Job Provider\'s name</string>
    <string name="search_jobs_here">Search Jobs Here</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="apply">Apply</string>
    <string name="apply_a_job">Apply a Job</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="first_name_edtProfile">First Name</string>
    <string name="last_name_edtProfile">Last Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="show_profile">Show Profile</string>
    <string name="show_job">Show Job</string>
    <string name="reset_password">Reset</string>
    <string name="choose_job">Choose Job</string>

    <string name="about_us_text"><b> Version 1.0 </b>\n\nTrial Version \n This is a sample App developed by JASY. \n\nOur Mission \nImproving the job applying and recruiting process.</string>
    <string name="about_us">About Us</string>

</resources>