<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <Button
        android:id="@+id/back_button_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_baseline_arrow_back_24"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        android:drawableTint="@color/white"
        android:paddingStart="10dp"
        android:paddingLeft="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/post_job"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/topnavbuttonColor"
        android:fontFamily="times new roman"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingLeft="12dp"
        android:text="@string/post_a_job"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:background="@color/backgroundColor"
            android:fitsSystemWindows="true"
            app:layout_constraintTop_toBottomOf="@+id/post_job">
            <LinearLayout
                android:id="@+id/linear_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/job_post_date"
                    android:inputType="date"
                    android:textColorHint="@color/icontextColor"
                    android:textSize="23dp" />

                <ImageView

                    android:id="@+id/post_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:srcCompat="@drawable/ic_date_range_black_24dp" />


            </LinearLayout>






        <EditText
            android:id="@+id/job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/job_title"
            android:inputType="textCapSentences"
            android:paddingStart="12dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/icontextColor"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout1" />

        <EditText
            android:id="@+id/job_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/job_description"
            android:inputType="textCapSentences"
            android:paddingStart="7dp"
            android:paddingEnd="5dp"
            android:textColorHint="@color/icontextColor"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="@+id/job_title"
            app:layout_constraintHorizontal_bias="0.916"
            app:layout_constraintStart_toStartOf="@+id/job_title"
            app:layout_constraintTop_toBottomOf="@+id/job_title" />

        <EditText
            android:id="@+id/number_of_employees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/number_of_employees"
            android:inputType="numberSigned"
            android:paddingStart="7dp"
            android:paddingEnd="5dp"
            android:textColorHint="@color/icontextColor"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="@+id/job_description"
            app:layout_constraintTop_toBottomOf="@+id/job_description" />

        <EditText
            android:id="@+id/job_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="no"
            android:hint="@string/job_location"
            android:inputType="textCapSentences"
            android:textColorHint="@color/icontextColor"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="@+id/number_of_employees"
            app:layout_constraintTop_toBottomOf="@+id/number_of_employees" />


        <LinearLayout
            android:id="@+id/linear_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/job_location"
            app:layout_constraintStart_toStartOf="@+id/job_location"
            app:layout_constraintTop_toBottomOf="@+id/job_location">


            <TextView
                android:id="@+id/job_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/choose_job"
                android:textColor="@color/icontextColor"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="@+id/job_location"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"

                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                android:textColorHint="@color/icontextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/job_category" />
        </LinearLayout>



            <EditText
                android:id="@+id/working_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:autofillHints="no"
                android:hint="@string/approximate_working_hours"
                android:inputType="number"
                android:textColorHint="@color/icontextColor"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout2" />


            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/working_hours"
                app:layout_constraintStart_toStartOf="@id/working_hours"
                app:layout_constraintTop_toBottomOf="@+id/working_hours">

                <TextView

                    android:id="@+id/job_salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:autofillHints="no"
                    android:hint="@string/salary"
                    android:textColorHint="@color/icontextColor"
                    android:textSize="23sp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/radio"
                    app:layout_constraintTop_toBottomOf="@+id/radio" />


                <RadioButton
                    android:id="@+id/range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/range"
                    android:textColor="@color/icontextColor"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/job_salary"
                    app:layout_constraintTop_toTopOf="@+id/job_salary" />

                <RadioButton
                    android:id="@+id/fixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/fixed"
                    android:textColor="@color/icontextColor"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/job_salary"
                    app:layout_constraintTop_toTopOf="@+id/job_salary" />

                <RadioButton
                    android:id="@+id/negotiable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/negotiable"
                    android:textColor="@color/icontextColor"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/range"
                    app:layout_constraintTop_toTopOf="@+id/job_salary" />


            </RadioGroup>
            <LinearLayout
                android:id="@+id/linear_layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio" >

                <EditText
                    android:id="@+id/apply_before"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/apply_before"
                    android:inputType="date"
                    android:textColorHint="@color/icontextColor"
                    android:textSize="23dp" />

                <ImageView

                    android:id="@+id/apply_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:srcCompat="@drawable/ic_date_range_black_24dp" />


            </LinearLayout>


            <EditText

                android:id="@+id/contact_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:autofillHints="no"
                android:hint="@string/contact_info"
                android:inputType="text"
                android:textColorHint="@color/icontextColor"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout3"
                app:layout_constraintHorizontal_bias="0.633"
                app:layout_constraintStart_toStartOf="@+id/linear_layout3"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout3" />

            <Button
                android:id="@+id/btnPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:text="@string/post"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_info" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>