<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <LinearLayout
        android:id="@+id/linear_layout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/topnavbuttonColor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_button_editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@drawable/ic_baseline_arrow_back_24"
            android:drawableTint="@color/white"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/topnavbuttonColor"
            android:fontFamily="times new roman"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout6">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:fitsSystemWindows="true"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/apply_job">

                <TextView
                    android:id="@+id/edit_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/firstname"
                    android:textColor="@color/icontextColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <EditText
                    android:id="@+id/edit_firstname_db"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icontextColor"
                    android:inputType="textPersonName"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@+id/edit_firstname"
                    app:layout_constraintTop_toBottomOf="@+id/edit_firstname"

                    />

                <TextView
                    android:id="@+id/edit_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname"
                    android:textColor="@color/icontextColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/edit_firstname_db"
                    app:layout_constraintTop_toBottomOf="@+id/edit_firstname_db" />

                <EditText
                    android:id="@+id/edit_lastname_db"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icontextColor"
                    android:inputType="textPersonName"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@+id/edit_lastname"
                    app:layout_constraintTop_toBottomOf="@+id/edit_lastname"

                    />

                <TextView
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emailph"
                    android:textColor="@color/icontextColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/edit_lastname_db"
                    app:layout_constraintTop_toBottomOf="@+id/edit_lastname_db" />

                <EditText
                    android:id="@+id/edit_email_db"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icontextColor"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@+id/edit_email"
                    app:layout_constraintTop_toBottomOf="@+id/edit_email" />

                <TextView
                    android:id="@+id/edit_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/icontextColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/edit_email_db"
                    app:layout_constraintTop_toBottomOf="@+id/edit_email_db" />

                <EditText
                    android:id="@+id/edit_contact_db"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icontextColor"
                    android:inputType="number"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@+id/edit_contact"
                    app:layout_constraintTop_toBottomOf="@+id/edit_contact"

                    />

                <TextView
                    android:id="@+id/edit_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/icontextColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/edit_contact_db"
                    app:layout_constraintTop_toBottomOf="@+id/edit_contact_db"

                    />

                <EditText
                    android:id="@+id/edit_location_db"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icontextColor"
                    android:inputType="textPersonName"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@+id/edit_location"
                    app:layout_constraintTop_toBottomOf="@+id/edit_location"

                    />

                <RadioGroup
                    android:id="@+id/radioGroupEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:background="@drawable/login_signup"
                    android:checkedButton="@id/female_signup"
                    android:fontFamily="times new roman"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_location_db">

                    <TextView
                        android:id="@+id/gender_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="times new roman"
                        android:hint="@string/gender"
                        android:paddingStart="10dp"
                        android:paddingLeft="12dp"
                        android:textColorHint="@color/icontextColor"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/female_edtProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:hint="@string/Female"
                        android:checked="true"
                        android:textColorHint="@color/icontextColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/male_edtProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="7dp"
                        android:hint="@string/male"
                        android:textColorHint="@color/icontextColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/others_edtProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="7dp"
                        android:hint="@string/others"
                        android:textColorHint="@color/icontextColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </RadioGroup>


                <TextView
                    android:id="@+id/edit_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/icontextColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/radioGroupEditProfile"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroupEditProfile"/>

                <LinearLayout
                    android:id="@+id/linear_layout7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/edit_dob"
                    app:layout_constraintTop_toBottomOf="@+id/edit_dob">


                    <EditText
                        android:id="@+id/edit_dob_db"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="date"
                        android:textColor="@color/icontextColor"
                        android:hint="@string/dd_mm_yy"
                        android:textSize="15sp"/>

                    <ImageView
                        android:id="@+id/edit_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date_range_black_24dp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:text="@string/save_profile"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout7" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>